# dwarves

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST  Makefile  NEWS  PKG-MAINTAINERS  README  README.DEBUG  README.btf  README.cross  README.ctracer  README.tarball  btf.h  btf_encoder.c  btf_encoder.h  btf_loader.c  btfdiff  buildcmd.sh  changes-v1.13  changes-v1.16  changes-v1.17  changes-v1.18  changes-v1.19  changes-v1.20  changes-v1.21  changes-v1.22  changes-v1.23  changes-v1.24  changes-v1.25  changes-v1.26  changes-v1.27  changes-v1.28  changes-v1.29  changes-v1.30  changes-v1.31  classes.c  classes.h  codiff.c  config.h.cmake  (+44 more)
.github/scripts/: build-debian.sh  build-kernel.sh  build-pahole.sh  compare-functions.sh  run-selftests.sh
.github/workflows/: build.yml  lint.yml  ondemand.yml  test.yml  vmtest.yml
cmake/modules/: FindDWARF.cmake  Findargp.cmake  Findobstack.cmake
lib/: Makefile  ctracer_jprobe.c  ctracer_relay.c  ctracer_relay.h  linux.blacklist.cu
lib/include/: bpf
man-pages/: pahole.1
ostra/: ostra-cg
ostra/python/: ostra.py
rpm/SPECS/: dwarves.spec
tests/: btf_functions.sh  btf_type_tag_order.sh  clang_parm_aggregate_1.sh  clang_parm_aggregate_2.sh  clang_parm_memory.sh  clang_parm_optimized.sh  clang_parm_optimized_stack_1.sh  clang_parm_optimized_stack_2.sh  default_vmlinux_btf.sh  flexible_arrays.sh  gcc_optimized_default.sh  gcc_true_signatures.sh  pfunct-btf-decl-tags.sh  prettify_perf.data.sh  reproducible_build.sh  test_lib.sh  tests
